changes login.html and signup instead of url

--- a/banking.html
+++ b/banking.html
@@ -16,8 +16,8 @@
                 <img src="download.png" />
                 <a href="#Home">Home</a>
                 <a href="https://www.yesbank.in/about-us">About Us</a>
-                <a href="http://127.0.0.1:5500/Signup.html" target="_blank">Sign Up</a>
-                <a href="http://127.0.0.1:5500/login.html" target="_blank">Login</a>
+                <a href="Signup.html" target="_blank">Sign Up</a>
+                <a href="login.html" target="_blank">Login</a>
                 <img src="icon.png" height="25px" width="25px"/>
             </nav><br>
             <label for="Account"><b>Account:</b></label>
