--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </footer>
     </body>
     </html>
+//Signup.html
 <!DOCTYPE html>
 <html>
     <head>
@@ -103,6 +104,7 @@
         </body>
     </head>
 </html>
+    //login
   <!DOCTYPE html>
 <html>
     <head>
@@ -129,6 +131,7 @@
         </body>
     </head>
 </html>
+    //forgot password
   <!DOCTYPE html>
 <html>
 <head>
@@ -151,6 +154,7 @@
         </body>
 </head>
 </html>
+    //Balance enquiry
   <!DOCTYPE html>
 <html>
     <head>
@@ -180,6 +184,7 @@
         </body>
     </head>
 </html>
+    //table
   <!DOCTYPE html>
 <html>
     <head>
